Fixes adds no wrap to white space in navigation menu for better mobile experience.

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -33,6 +33,7 @@ ul.mainmenu {
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 1px;
+  white-space: nowrap;
 
   li {
     display: flex;
